kubernetes/apps/orbit-www/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orbit-www
  labels:
    app.kubernetes.io/name: orbit-www
    app.kubernetes.io/part-of: orbit
