kubernetes/apps/orbit-www/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orbit-www
  namespace: orbit-www
  labels:
    app.kubernetes.io/name: orbit-www
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: orbit-www
    app.kubernetes.io/component: frontend
